<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artists_flipper"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Loading -->
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <!-- Artist & Selection views -->
    <include layout="@layout/artists_content_list" />
    <include layout="@layout/artists_content_selection" />

    <!-- Error message -->
    <LinearLayout
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/error_loading" />
        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

    <!-- Auth Error message -->
    <LinearLayout
        android:id="@+id/error_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/error_auth" />
        <Button
            android:id="@+id/retry2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            style="@style/Widget.AppCompat.Button.Colored" />
        <Button
            android:id="@+id/refresh_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_auth"
            style="@style/ButtonBorderlessColored" />
    </LinearLayout>
</ViewFlipper>